--- a/styles.css
+++ b/styles.css
@@ -215,9 +215,9 @@ h2 {
     color: #D4D4D4;
     margin: 20px auto;
     max-width: 800px;
-    box-shadow: 0 4px 10px rgba(19, 6, 160, 0.3);
+    box-shadow: 0 4px 10px rgba(212, 211, 216, 0.3);
     position: relative;
-    overflow: hidden; /* 確保溢出部分不顯示 */
+    overflow: hidden; 
 }
 
 .about-me h2 {
@@ -225,7 +225,7 @@ h2 {
     color: #FFFFFF;
     text-align: center;
     margin-bottom: 15px;
-    background-color: rgba(0, 0, 0, 0.6); /* 半透明背景確保文字清晰 */
+    background-color: rgba(0, 0, 0, 0.6); 
     padding: 10px;
     border-radius: 8px;
 }
@@ -242,13 +242,13 @@ h2 {
     align-items: center;
     color: #B0BEC5;
     padding: 8px;
-    background-color: rgba(7, 11, 87, 0.6); /* 半透明背景確保文字清晰 */
+    background-color: rgba(7, 11, 87, 0.6);
     border-radius: 8px;
     transition: background-color 0.3s ease;
 }
 
 .about-me li:hover {
-    background-color: rgba(33, 89, 220, 0.8); /* 增加透明度以突顯效果 */
+    background-color: rgba(33, 89, 220, 0.8); 
 }
 
 .about-me li i {
@@ -267,7 +267,7 @@ h2 {
 .about-me {
     flex: 1.5;
     margin-right: 20px; /* 控制About Me和GIF之間的距離 */
-    background-color: rgba(11, 11, 11, 0.5);
+    background-color: rgba(30, 28, 33, 0.5);
 }
 
 .about-gif {
@@ -288,6 +288,11 @@ h2 {
 .data-visualisation-section {
     padding: 60px 20px;
     text-align: center;
+    background-image: url('images/Adelaide.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #D4D4D4;
 }
 
 .project {
@@ -321,9 +326,13 @@ h2 {
 .Thesis-section {
     padding: 60px 20px;
     text-align: center;
-    background-color: #1E1E1E;
+    background-image: url('images/thesis.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: #D4D4D4;
 }
+
 
 .Thesis-section h2 {
     font-size: 3em;
@@ -366,10 +375,12 @@ h2 {
 .ar-section {
     padding: 60px 20px;
     text-align: center;
-    background-color: #1E1E1E;
+    background-image: url('images/AI.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: #D4D4D4;
 }
-
 .ar-section h2 {
     font-size: 3em;
     color: #FFFFFF;
