--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body, html {
 }
 
 .menu-item:hover {
-    background-color: #291d3d;
+    background-color: #259b9d;
     color: #e1ebea;
 }
 /* Modal Styles */
